fix: prevent x overflow

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -46,6 +46,8 @@ body
 
   min-height: 100%
 
+  overflow-x: hidden
+
 header,
 nav,
 section
